--- a/mobile/assets/styling/entry.css
+++ b/mobile/assets/styling/entry.css
@@ -1,22 +1,52 @@
 :root {
-    --entry-color: gray;
+    --entry-border-color: rgb(33, 33, 33);
+    /* --entry-border-color: rgb(27, 27, 27); */
+    --entry-text-color: rgb(163, 163, 163);
+    --entry-scalar-bg: rgb(21, 21, 21);
+    /* --entry-scalar-bg: rgb(23, 23, 23); */
     --sequence-color: white;
+
+}
+
+.entry-list {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-md);
+    width: 24rem;
+    background-color: var(--bg-log);
 }
 
 #entry {
+    color: var(--entry-text-color);
+    display: flex;
+    flex-direction: column;
     font-size: 16px;
-}
-
-#entry .header {
     padding-block: var(--spacing-sm);
-    padding-inline: var(--spacing-md);
+    padding-inline-start: var(--spacing-md);
     border-radius: 4px;
+    max-width: 24rem;
+    box-sizing: border-box;
+    border: 1px solid var(--entry-border-color);
 }
 
-#entry.scalar .header {
-    background-color: var(--entry-color);
+/* Nested entry lists inside entries */
+#entry .entry-list {
+    padding-inline: 0;
+    padding-block: var(--spacing-sm);
+    width: auto;
 }
 
-#entry.sequence .header {
-    border: 1px solid var(--sequence-color);
+/* Nested entries */
+#entry .entry-list #entry {
+    max-width: none;
+    border-radius: 4px 0 0 4px;
+    border-right: 0px;
+}
+
+#entry.scalar {
+    background-color: var(--entry-scalar-bg);
+}
+
+#entry.sequence {
+    /* border: 1px solid var(--entry-scalar-bg); */
 }
