--- a/mobile/assets/styling/main.css
+++ b/mobile/assets/styling/main.css
@@ -1,8 +1,18 @@
+html,
 body {
-    background-color: #0f1116;
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    /* background-color: #0f1116; */
+    background-color: var(--bg-app);
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+    /* padding: 20px; */
+    box-sizing: border-box;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 #hero {
