Fix UI freezing after n async tasks due to async main calling blocking launch function.

--- a/mobile/assets/tailwind.css
+++ b/mobile/assets/tailwind.css
@@ -7,6 +7,7 @@
     'Noto Color Emoji';
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
     monospace;
+    --color-red-700: oklch(50.5% 0.213 27.518);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
@@ -194,8 +195,17 @@
   .block {
     display: block;
   }
+  .contents {
+    display: contents;
+  }
   .flex {
     display: flex;
+  }
+  .hidden {
+    display: none;
+  }
+  .table {
+    display: table;
   }
   .h-full {
     height: 100%;
@@ -220,6 +230,9 @@
   }
   .flex-row {
     flex-direction: row;
+  }
+  .justify-between {
+    justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
@@ -252,11 +265,17 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .pr-4 {
+    padding-right: calc(var(--spacing) * 4);
+  }
   .text-black {
     color: var(--color-black);
   }
   .text-gray-800 {
     color: var(--color-gray-800);
+  }
+  .text-red-700 {
+    color: var(--color-red-700);
   }
 }
 @property --tw-rotate-x {
