--- a/desktop/assets/tailwind.css
+++ b/desktop/assets/tailwind.css
@@ -243,6 +243,10 @@
   .rounded-sm {
     border-radius: var(--radius-sm);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
